<resources>
    <string name="app_name">Capstone PAKE</string>
    <string name="Login">Login</string>
    <string name="Reset">Reset Password</string>
    <string name="fill_the_name">Fill Your Name</string>
    <string name="password_min">Password Minimum 6 Characters</string>
    <string name="email_not_valid">Email Not Valid</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="fill_email">Fill your email</string>
    <string name="fill_the_password">Fill your password</string>
    <string name="Welcome">Welcome to PAKE</string>
    <string name="car_type">Car Type</string>
    <string name="number_plat">Number Plate</string>
    <string name="forget_password_title">FORGET PASSWORD</string>
    <string name="tv_description_forget_password">Silahkan isi data berikut agar kami dapat mengirimkan link untuk reset password ke email anda.</string>
    <string name="tv_first_name">First Name</string>
    <string name="tv_last_name">Last Name</string>
    <string name="ed_email">Email</string>
    <string name="Gallery">Gallery</string>
    <string name="camera">CAMERA</string>
    <string name="mileage">Mileage</string>
    <string name="production">Production Year</string>
    <string name="maintenance">Last Maintenance Time</string>
    <string name="addCar">Add Car</string>
    <string name="ImageView">Image View</string>
    <string name="request_reset_password">Request Reset Password</string>
    <string name="nav_regist_from_fp">Belum punya akun? Daftar akun</string>
    <string name="reset_password_title">RESET PASSWORD</string>
    <string name="ed_email_rp">New Password</string>
    <string name="confirm">Confirm</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="Register">REGISTER</string>
    <string name="confirmPWD">Confirm Password</string>
    <string name="full_name">Full Name</string>
    <string name="gender">Gender</string>
    <string name="placeAndDate">Place and Date of Birth</string>
    <string name="phoneNum">Phone Number</string>
    <string name="full_address">Full Address</string>
    <string name="register_new_acc">REGISTER NEW ACCOUNT</string>
    <string name="description">desc</string>
    <string name="reset_report_problem_title">Report Problem</string>
    <string name="ed_new_password">New Password</string>
    <string name="change_password">Change Password</string>
    <string name="ed_password_rp">Password</string>
    <string name="ed_confirm_new_password">Confirm New Password</string>
    <string name="your_car_list">Your Car List</string>
    <string name="mobile_favorite">Mobile Favorite</string>
    <string name="dun_have_acc">Don\'t have any account?</string>
    <string name="create_acc">Create An Account</string>
    <string name="fill_the_form">Fill the form</string>
    <string name="Enter_pwd">Enter your password</string>
    <string name="reEnter_pwd">Re-enter your password</string>
    <string name="date_and_place">Ex: Bogor, 9 April 1998</string>
    <string name="enter_your_phone">Ex: +628xxxxxxxxxx</string>
    <string name="enter_full_address">Ex: Jln. Blacker Street No. 255b</string>
    <string name="male_or_female">Male/Female</string>
    <string name="camera_not_allowed">Camera not allowed</string>
    <string name="AddCarActivity">Add Car</string>
    <string name="logo">It\'s a PAKE logo</string>
</resources>