<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.forgetpassword.ForgetPasswordActivity">

    <TextView
        android:id="@+id/tv_forget_password"
        style="@style/TextTitle.bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="119dp"
        android:text="@string/forget_password_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="288dp"
        android:layout_height="28dp"
        android:layout_marginTop="12dp"
        android:text="@string/tv_description_forget_password"
        android:textSize="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_forget_password"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_forget_password"
        app:layout_constraintTop_toBottomOf="@+id/tv_forget_password"
        app:layout_constraintVertical_bias="0.0" />


  <RelativeLayout
      android:id="@+id/relative1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentStart="true"
      android:layout_marginTop="26dp"
      app:layout_constraintStart_toStartOf="@+id/textView"
      app:layout_constraintTop_toBottomOf="@+id/textView">

    <TextView
        android:id="@+id/tv_first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:text="@string/tv_first_name"
        app:layout_constraintVertical_bias="0.0" />

    <com.capstoneproject.c22ps159.pake.ui.customview.NameEditText
        android:id="@+id/ed_first_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="135dp"
        android:layout_height="30dp"
        android:layout_below="@+id/tv_first_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_first_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_first_name"
        app:layout_constraintVertical_bias="0.0"
        app:startIconDrawable="@drawable/ic_email" />

  </RelativeLayout>

  <RelativeLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="26dp"
      app:layout_constraintEnd_toEndOf="@+id/textView"
      app:layout_constraintTop_toBottomOf="@+id/textView">

    <TextView
        android:id="@+id/tv_last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:text="@string/tv_last_name"
        app:layout_constraintVertical_bias="0.0" />

    <com.capstoneproject.c22ps159.pake.ui.customview.NameEditText
        android:id="@+id/ed_last_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="135dp"
        android:layout_height="30dp"
        android:layout_below="@+id/tv_last_name"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_last_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_last_name"
        app:layout_constraintVertical_bias="0.0"
        app:startIconDrawable="@drawable/ic_email" />
  </RelativeLayout>

  <RelativeLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="83dp"
      app:layout_constraintEnd_toEndOf="@+id/textView"
      app:layout_constraintStart_toStartOf="@+id/textView"
      app:layout_constraintTop_toBottomOf="@+id/textView">

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:text="@string/ed_email"
        app:layout_constraintVertical_bias="0.0" />

    <com.capstoneproject.c22ps159.pake.ui.customview.NameEditText
        android:id="@+id/ed_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="280dp"
        android:layout_height="30dp"
        android:layout_below="@+id/tv_email"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_email"
        app:layout_constraintTop_toBottomOf="@+id/tv_email"
        app:layout_constraintVertical_bias="0.0"
        app:startIconDrawable="@drawable/ic_email" />
  </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>