<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.resetpassword.ResetPasswordActivity">

    <TextView
        android:id="@+id/tv_reset_password"
        style="@style/TextTitle.bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="119dp"
        android:text="@string/reset_password_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <RelativeLayout
        android:id="@+id/layout_password_FP"
        android:layout_width="288dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_reset_password"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_reset_password"
        app:layout_constraintTop_toBottomOf="@+id/tv_reset_password">

        <TextView
            android:id="@+id/tv_password_rp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp"
            android:text="@string/ed_email_rp"
            app:layout_constraintVertical_bias="0.0" />

        <com.capstoneproject.c22ps159.pake.ui.customview.NameEditText
            android:id="@+id/ed_password_rp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_below="@+id/tv_password_rp"
            android:layout_marginTop="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_password_rp"
            app:layout_constraintTop_toBottomOf="@+id/tv_password_rp"
            app:layout_constraintVertical_bias="0.0"
            app:startIconDrawable="@drawable/ic_email" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_confirm_password_FP"
        android:layout_width="288dp"
        android:layout_height="50dp"
        android:layout_marginTop="13dp"
        app:layout_constraintEnd_toEndOf="@+id/layout_password_FP"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/layout_password_FP"
        app:layout_constraintTop_toBottomOf="@+id/layout_password_FP">

        <TextView
            android:id="@+id/tv_confirm_password_rp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp"
            android:text="@string/ed_email_rp"
            app:layout_constraintVertical_bias="0.0" />

        <com.capstoneproject.c22ps159.pake.ui.customview.NameEditText
            android:id="@+id/ed_confirm_password_rp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_below="@+id/tv_confirm_password_rp"
            android:layout_marginTop="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_confirm_password_rp"
            app:layout_constraintTop_toBottomOf="@+id/tv_confirm_password_rp"
            app:layout_constraintVertical_bias="0.0"
            app:startIconDrawable="@drawable/ic_email" />
    </RelativeLayout>


    <Button
        android:id="@+id/btn_reset_password"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="214dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/bg_btn_orange"
        android:backgroundTint="@color/Orange1"
        android:text="@string/confirm"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_confirm_password_FP" />


</androidx.constraintlayout.widget.ConstraintLayout>